my-salesforce-org/cpq-app/main/default/objects/IndustryPrice__c/fields/IPIndustry__c.field-meta.xml
<CustomField>
    <fullName>IPIndustry__c</fullName>
    <label>IPIndustry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>