my-salesforce-org/cpq-app/main/default/objects/IndustryPrice__c/fields/IPProduct__c.field-meta.xml
<CustomField>
    <fullName>IPProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>IPProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Industry Prices</relationshipLabel>
    <relationshipName>Industry_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>