my-salesforce-org/cpq-app/main/default/objects/IndustryPrice__c/fields/IPSLA__c.field-meta.xml
<CustomField>
    <fullName>IPSLA__c</fullName>
    <label>IPSLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>